# andry

./: .coverage  README.md  create_data.py  crontab_entry.txt  fix_and_scan.py  nfl_data.csv  predict_week14.py  pyproject.toml  requirements.txt  tune_hyperparameters.py  upcoming_games.csv
analysis/: betting_analysis.py  feature_impact_analysis.py
app/astrology/: __init__.py  calculator.py  prediction.py  stadium_data.py
app/calculations/: __init__.py  advanced_predictions.py  nfl_analysis.py  nfl_combined_model.py
config/: .env.example  Dockerfile  docker-compose.yml  nginx.conf
data/: collection_summary.json  download_nfl_data.py  enhanced_historical_games.csv  future_games.csv  games.csv  historical_games.py  nfl_games.csv  nfl_games_2019_2024_progress.csv  team_metadata.py  team_stats.csv
data/2024_season/: analysis_summary.csv  injuries_current.csv  players_2024.csv  schedule_2024.csv  weekly_data_2024.csv
data/historical/: nfl_games_training.csv
data/processed/: 500_games_analysis.csv  evaluation_results.csv  nfl_games_processed.csv  nfl_games_processed_summary.json  nfl_processed_data.csv  team_stats_processed.csv
data_collectors/: totals_collector.py
models/: nfl_moneyline_model.joblib  nfl_spread_model.joblib  nfl_total_points_model.joblib
outputs/: prediction_report.txt
predictions/: metrics_20241206_113328.json  metrics_20241206_121540.json  real_games_20241206_112612.json  real_games_20241206_113316.json  real_games_20241206_121010.json  synthetic_games_20241206_122057.json
saved_models/: nfl_vedic_model_scaler.joblib
scripts/: comprehensive_nfl_scraper.py  convert_to_local_time.py  fetch_team_stats.py  improved_model_trainer.py  predict_games.py  run_continuous_tests.sh  train_models.py  update_astrological_data.py  update_nfl_data.sh
src/: __init__.py
tests/: test_astro.py  test_prediction.py  test_predictions.py
training/: nfl_model_trainer.py
(+181 files in other folders)
