[tool.poetry]
name = "nfl-prediction"
version = "1.0.0"
description = "NFL Game Prediction and Analysis System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.3"
Flask-SQLAlchemy = "3.1.1"
Flask-Migrate = "4.0.5"
Flask-Caching = "2.1.0"
Flask-Limiter = "3.5.0"
Flask-CORS = "4.0.0"
SQLAlchemy = "2.0.21"
alembic = "1.12.0"
numpy = "1.26.2"
pandas = "2.1.4"
scikit-learn = "1.3.2"
joblib = "1.3.2"
xgboost = "2.0.3"
lightgbm = "4.2.0"
catboost = "1.2.2"
imbalanced-learn = "0.12.0"
scipy = "1.11.3"
torch = "2.1.2"
pytorch-lightning = "2.1.3"
plotly = "5.18.0"
dash = "2.14.2"
matplotlib = "3.8.2"
seaborn = "0.13.1"
requests = "2.31.0"
beautifulsoup4 = "4.12.3"
aiohttp = "3.9.1"
fastapi = "0.108.0"
uvicorn = "0.25.0"
python-dotenv = "1.0.0"
tqdm = "4.66.1"
loguru = "0.7.2"
pydantic = "2.5.3"
rich = "13.7.0"
celery = "^5.3.6"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
prometheus-client = "^0.19.0"
sentry-sdk = "^1.39.1"

[tool.poetry.dev-dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
black = "23.12.1"
isort = "5.13.2"
flake8 = "6.1.0"
mypy = "1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
